base/ianpringle_org/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: ianpringle-org-gateway
  namespace: ianpringle-org
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "ianpringle.org"
        - "www.ianpringle.org"
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ianpringle-org-cert
      hosts:
        - "ianpringle.org"
        - "www.ianpringle.org"
